1PM submission for assessment-3

--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,66 @@
-Not implemented yet! 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>About Me</title>
+	<link href="styles.css" rel="stylesheet">
+
+</head>
+<body>
+	<nav>
+		<ol>
+	        <li class="crumb"><a href="./home.html">Home</a></li>
+	        <li class="crumb"><a href="./profile.html">Profile</a></li>
+	        <li class="crumb"><a href="./about.html">About</a></li>
+            <li class="crumb"><a href="./neighborhood.html">My Neighborhood</a></li>
+	    </ol>
+	</nav>
+
+<body>
+    <h1 class="headers">My name is Arthur Baronov</h1>
+    <p id="about-me">I'm currently a student at Devmountain. While pursuing my PhD in applied mathematics, I began studying programming because I felt this would pair well with math. However, I discovered that there were many things that I enjoyed more about programming than about solving math problems all day. After completing my first semester in the PhD program, I decided that I would rather pursue software engineering as a career for several reasons:
+        <ul class="lists" id="my-reasons">
+            <li>I believe software development uses more logic. Math professors don't want to admit this but there's a lot of memorization required in math.</li>
+            <li>I love being able to create an actual product or a tool that people can use to solve problems.</li>
+            <li>In most cases, math can't be applied to a real world problem unless it's used in software.</li>
+            <li>I enjoy hanging out with / talking to programmers.</li>
+            <li>The programming community is more supportive of one another.</li>
+            <li>There are way more job opportunities!</li>
+        </ul>
+    </p>
+    <h2 class="headers">Professional Skills</h2>
+    <ul class="lists">
+        <li>Mathematical modeling</li>
+        <li>Real Analysis</li>
+        <li>Numerical Analysis and Numerical Methods</li>
+        <li>Ordinary and Partial Differential Equations</li>
+        <li>Probability and Statistics</li>
+        <li>Matrix Methods for Data Analysis</li>
+        <li>C++</li>
+        <li>Javascript</li>
+        <li>HTML and CSS</li>
+    </ul>
+    <h2 class="headers">Other Skills</h2>
+    <ul class="lists">
+        <li>Guitar</li>
+        <li>Skateboarding</li>
+        <li>Playing Video Games</li>
+        <li>Making Coffee</li>
+    </ul>
+    <h3 class="headers">Career Goals</h3>
+    <ul class="career-goals">
+        <li>Work as a backend software engineer.</li>
+        <li>Create my own web app business.</li>
+    </ul>
+    <div class="flex-parent jc-center">
+        <button id="color" class="fun-alerts">My Favorite Color</button>
+        <button id="place" class="fun-alerts">My Favorite Place</button>
+        <button id="ritual" class="fun-alerts">My Favorite Ritual</button>
+    </div>
+
+
+    <script src="profile.js"></script>
+</body>
+</html>
 
 <br>
 <br>
