--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
+			<li class="crumb"><a href="./neighborhood.html">My Neighborhood</a></li>
 	    </ol>
 	</nav>
 
@@ -17,12 +18,7 @@
 		<h1>About</h1>
 
 		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, 
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo 
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat 
-		non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			This page was designed as part of the Devmountain fundamentals curriculum. The purpose of this project is to demonstrate a basic understanding of front-end development. This includes Html, CSS and adding interactivity to a web page with Javascript.
 		
 		</p>
 
