--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 	        <li class="crumb"><a href="./home.html">Home</a></li>
 	        <li class="crumb"><a href="./profile.html">Profile</a></li>
 	        <li class="crumb"><a href="./about.html">About</a></li>
+			<li class="crumb"><a href="./neighborhood.html">My Neighborhood</a></li>
 	    </ol>
 	</nav>
 
@@ -19,7 +20,7 @@
 		<!-- insert hello world here -->
 
 		<img src="https://www.essexduck.com/uploads/1/3/2/0/132064494/s101382617522703170_p666_i1_w500.jpeg">
-		<p>Welcome to this website!</p>
+		<p>Welcome to this website! Thank you for stopping by and I hope you enjoy the content!</p>
 		<ul>
 			<li>You're very tech savvy.</li>
 			<li>You're very analytical.</li>
@@ -29,6 +30,7 @@
 		<h2>Contact Us</h2>
 		<form id="contact">
 			<form id="hear-about-us">
+				<p>How did you hear about us?</p>
 				<input type="checkbox" id="google" name="google" value="google">
 				<label for="google">Google</label>
 				<input type="checkbox" id="a-friend" name="a-friend" value="a-friend">
@@ -41,9 +43,9 @@
 			<input type="text">
 
 			Message:
-			<input type="textarea">
+			<input type="textarea" id="name-input">
 
-			<input type="submit">
+			<input type="submit" id="submit-button">
 
 
 		</form>
