--- a/neighborhood.html
+++ b/neighborhood.html
@@ -34,12 +34,15 @@
         <li><a id="link" href="https://enchantedgrounds.com/">Enchanted Grounds - board games and comic books</a></li>
         <li><a id="link" href="https://www.microcenter.com/site/stores/denver.aspx">Micro Center</a></li>
         <li> <a id="link" href="https://www.wizardschest.com/">The Wizards Chest</a></li>
-
     </ul>
+
+
     <h3 class="headers">Pick a random restaurant</h3>
+    <div class="flex-parent jc-center">
+        <button class="pick-restaurant">Random restaurant suggestion</button>
+    </div>
 
-
-
+    
     <script src="neighborhood.js"></script>
 </body>
 </html>
