--- a/profile.html
+++ b/profile.html
@@ -17,9 +17,9 @@
 
 <body>
     <h1 class="headers">My name is Arthur Baronov</h1>
-    <p id="about-me">I'm currently a student at Devmountain. While pursuing my PhD in applied mathematics, I began studying programming because I felt this would pair well with math. However, I discovered that there were many things that I enjoyed more about programming than about solving math problems all day. After completing my first semester in the PhD program, I decided that I would rather pursue software engineering as a career for several reasons:
+    <p id="about-me">I'm currently a student at Devmountain. Last semester, I began the PhD program for applied mathematics at UC Denver. During this time, I continued studying programming because I felt this would pair well with math. I was focussing mostly on C++. The more I learned about programming, the more I questioned whether math was what I really wanted to pursue. After completing my first semester in the PhD program, I decided that I would rather pursue software engineering as a career for several reasons:
         <ul class="lists" id="my-reasons">
-            <li>I believe software development uses more logic. Math professors don't want to admit this but there's a lot of memorization required in math.</li>
+            <li>I believe software development uses more logic. Math professors don't want to admit this but there's a lot of memorization required in math. However, software developers need to understand the logic of how different pieces of software work together; memorizing syntax isn't encouraged.</li>
             <li>I love being able to create an actual product or a tool that people can use to solve problems.</li>
             <li>In most cases, math can't be applied to a real world problem unless it's used in software.</li>
             <li>I enjoy hanging out with / talking to programmers.</li>
